--- a/README.Rmd
+++ b/README.Rmd
@@ -16,8 +16,8 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The ggplot2-extension-ecosystem will help us work on the 'Who are the ggplot2 extenders? and how to become one'.
-
+The ggplot2-extension-ecosystem [githubrepo](https://github.com/EvaMaeRey/ggplot2-extension-ecosystem) will help us work on the 'Who are the ggplot2 extenders? and how to become one'.
+ 
 Here links to html rendered files:
 
 ```{r, results = 'asis', echo = F}
@@ -34,8 +34,8 @@ webpages %>%
   paste0("1. [",
          . ,
          "]",
-         "(https://evamaerey.github.io/mytidytuesday/", ., 
-         ") **[source](https://github.com/evamaerey/mytidytuesday/blob/master/",
+         "(https://evamaerey.github.io/ggplot2-extension-ecosystem/", ., 
+         ") **[source](https://github.com/evamaerey/ggplot2-extension-ecosystem/blob/master/",
          file_name_wo_extension,".Rmd",
          ")**\n") %>% 
   cat()     
@@ -58,7 +58,7 @@ webpages %>%
   paste0("1. [",
          . ,
          "]",
-         "(https://evamaerey.github.io/mytidytuesday/", ., ")") %>% 
+         "(https://evamaerey.github.io/ggplot2-extension-ecosystem/", ., ")") %>% 
   cat()     
 
 
